Replace Collections singleton factory usages