@@ -28,7 +28,6 @@ import java.io.IOException;
 import java.net.URI;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -842,7 +841,7 @@ public class RealtimeTableDataManager extends BaseTableDataManager {
     if (isDedupEnabled()) {
       return _tableDedupMetadataManager.getPartitionToPrimaryKeyCount();
     }
-    return Collections.emptyMap();
+    return Map.of();
   }
 
   @Nullable
