@@ -19,7 +19,6 @@
 package org.apache.pinot.core.query.killing;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.apache.pinot.core.query.killing.strategy.ScanEntriesThresholdStrategy;
 import org.apache.pinot.spi.query.QueryScanCostContext;
@@ -91,7 +90,7 @@ public class CompositeQueryKillingStrategyTest {
   @Test
   public void testEmptyStrategiesNeverKills() {
     CompositeQueryKillingStrategy composite =
-        new CompositeQueryKillingStrategy(Collections.emptyList(), CompositeQueryKillingStrategy.Mode.ANY);
+        new CompositeQueryKillingStrategy(List.of(), CompositeQueryKillingStrategy.Mode.ANY);
     QueryScanCostContext ctx = new QueryScanCostContext();
     ctx.addEntriesScannedInFilter(Long.MAX_VALUE - 1);
     assertFalse(composite.shouldTerminate(ctx));
@@ -100,7 +99,7 @@ public class CompositeQueryKillingStrategyTest {
   @Test
   public void testEmptyStrategiesAllModeNeverKills() {
     CompositeQueryKillingStrategy composite =
-        new CompositeQueryKillingStrategy(Collections.emptyList(), CompositeQueryKillingStrategy.Mode.ALL);
+        new CompositeQueryKillingStrategy(List.of(), CompositeQueryKillingStrategy.Mode.ALL);
     QueryScanCostContext ctx = new QueryScanCostContext();
     assertFalse(composite.shouldTerminate(ctx));
   }
