@@ -19,7 +19,6 @@
 package org.apache.pinot.core.query.request.context.utils;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -92,7 +91,7 @@ public class BrokerRequestToQueryContextConverterTest {
       assertEquals(selectExpressions.size(), 1);
       assertEquals(selectExpressions.get(0), ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "count",
-              Collections.singletonList(ExpressionContext.forIdentifier("*")))));
+              List.of(ExpressionContext.forIdentifier("*")))));
       assertEquals(selectExpressions.get(0).toString(), "count(*)");
       assertFalse(queryContext.isDistinct());
       assertEquals(getAliasCount(queryContext.getAliasList()), 0);
@@ -241,7 +240,7 @@ public class BrokerRequestToQueryContextConverterTest {
       assertEquals(selectExpressions.get(1), ExpressionContext.forIdentifier("bar"));
       assertEquals(selectExpressions.get(1).toString(), "bar");
       assertEquals(selectExpressions.get(2), ExpressionContext.forFunction(
-          new FunctionContext(FunctionContext.Type.AGGREGATION, "sum", Collections.singletonList(
+          new FunctionContext(FunctionContext.Type.AGGREGATION, "sum", List.of(
               ExpressionContext.forFunction(new FunctionContext(FunctionContext.Type.TRANSFORM, "add",
                   Arrays.asList(ExpressionContext.forIdentifier("foo"), ExpressionContext.forIdentifier("bar"))))))));
       assertEquals(selectExpressions.get(2).toString(), "sum(add(foo,bar))");
@@ -261,7 +260,7 @@ public class BrokerRequestToQueryContextConverterTest {
       assertNotNull(orderByExpressions);
       assertEquals(orderByExpressions.size(), 2);
       assertEquals(orderByExpressions.get(0), new OrderByExpressionContext(ExpressionContext.forFunction(
-          new FunctionContext(FunctionContext.Type.AGGREGATION, "sum", Collections.singletonList(
+          new FunctionContext(FunctionContext.Type.AGGREGATION, "sum", List.of(
               ExpressionContext.forFunction(new FunctionContext(FunctionContext.Type.TRANSFORM, "add",
                   Arrays.asList(ExpressionContext.forIdentifier("foo"), ExpressionContext.forIdentifier("bar"))))))),
           true));
@@ -331,7 +330,7 @@ public class BrokerRequestToQueryContextConverterTest {
       assertEquals(selectExpressions.size(), 2);
       assertEquals(selectExpressions.get(0), ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-              Collections.singletonList(ExpressionContext.forIdentifier("foo")))));
+              List.of(ExpressionContext.forIdentifier("foo")))));
       assertEquals(selectExpressions.get(0).toString(), "sum(foo)");
       assertEquals(selectExpressions.get(1), ExpressionContext.forIdentifier("bar"));
       assertEquals(selectExpressions.get(1).toString(), "bar");
@@ -355,7 +354,7 @@ public class BrokerRequestToQueryContextConverterTest {
       assertEquals(orderByExpressions.size(), 1);
       assertEquals(orderByExpressions.get(0), new OrderByExpressionContext(ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-              Collections.singletonList(ExpressionContext.forIdentifier("foo")))), false));
+              List.of(ExpressionContext.forIdentifier("foo")))), false));
       assertEquals(orderByExpressions.get(0).toString(), "sum(foo) DESC");
       assertNull(queryContext.getHavingFilter());
       assertEquals(queryContext.getLimit(), 10);
@@ -375,7 +374,7 @@ public class BrokerRequestToQueryContextConverterTest {
       assertEquals(selectExpressions.size(), 2);
       assertEquals(selectExpressions.get(0), ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-              Collections.singletonList(ExpressionContext.forIdentifier("foo")))));
+              List.of(ExpressionContext.forIdentifier("foo")))));
       assertEquals(selectExpressions.get(0).toString(), "sum(foo)");
       assertEquals(selectExpressions.get(1), ExpressionContext.forIdentifier("bar"));
       assertEquals(selectExpressions.get(1).toString(), "bar");
@@ -392,7 +391,7 @@ public class BrokerRequestToQueryContextConverterTest {
       assertNotNull(havingFilter);
       assertEquals(havingFilter, FilterContext.forPredicate(new InPredicate(ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-              Collections.singletonList(ExpressionContext.forIdentifier("foo")))), Arrays.asList("5", "10", "15"))));
+              List.of(ExpressionContext.forIdentifier("foo")))), Arrays.asList("5", "10", "15"))));
       assertEquals(havingFilter.toString(), "sum(foo) IN ('5','10','15')");
       assertEquals(queryContext.getLimit(), 10);
       assertEquals(queryContext.getOffset(), 0);
@@ -419,10 +418,10 @@ public class BrokerRequestToQueryContextConverterTest {
       assertEquals(arguments.size(), 2);
       assertEquals(arguments.get(0), ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-              Collections.singletonList(ExpressionContext.forIdentifier("col1")))));
+              List.of(ExpressionContext.forIdentifier("col1")))));
       assertEquals(arguments.get(1), ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "max",
-              Collections.singletonList(ExpressionContext.forIdentifier("col2")))));
+              List.of(ExpressionContext.forIdentifier("col2")))));
 
       // HAVING clause
       FilterContext havingFilter = queryContext.getHavingFilter();
@@ -445,10 +444,10 @@ public class BrokerRequestToQueryContextConverterTest {
       assertEquals(arguments.size(), 2);
       assertEquals(arguments.get(0), ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-              Collections.singletonList(ExpressionContext.forIdentifier("col1")))));
+              List.of(ExpressionContext.forIdentifier("col1")))));
       assertEquals(arguments.get(1), ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "min",
-              Collections.singletonList(ExpressionContext.forIdentifier("col2")))));
+              List.of(ExpressionContext.forIdentifier("col2")))));
       // Skip checking the second child of the AND filter
 
       // ORDER-BY clause
@@ -464,7 +463,7 @@ public class BrokerRequestToQueryContextConverterTest {
       assertEquals(arguments.get(0).getFunction().getFunctionName(), "plus");
       assertEquals(arguments.get(1), ExpressionContext.forFunction(
           new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-              Collections.singletonList(ExpressionContext.forIdentifier("col4")))));
+              List.of(ExpressionContext.forIdentifier("col4")))));
 
       assertEquals(queryContext.getColumns(), new HashSet<>(Arrays.asList("col1", "col2", "col3", "col4")));
       assertFalse(QueryContextUtils.isSelectionQuery(queryContext));
@@ -486,17 +485,17 @@ public class BrokerRequestToQueryContextConverterTest {
       assertNotNull(indexMap);
       assertEquals(indexMap.size(), 6);
       assertEquals((int) indexMap.get(Pair.of(new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-          Collections.singletonList(ExpressionContext.forIdentifier("col1"))), null)), 0);
+          List.of(ExpressionContext.forIdentifier("col1"))), null)), 0);
       assertEquals((int) indexMap.get(Pair.of(new FunctionContext(FunctionContext.Type.AGGREGATION, "max",
-          Collections.singletonList(ExpressionContext.forIdentifier("col2"))), null)), 1);
+          List.of(ExpressionContext.forIdentifier("col2"))), null)), 1);
       assertEquals((int) indexMap.get(Pair.of(new FunctionContext(FunctionContext.Type.AGGREGATION, "min",
-          Collections.singletonList(ExpressionContext.forIdentifier("col2"))), null)), 2);
+          List.of(ExpressionContext.forIdentifier("col2"))), null)), 2);
       assertEquals((int) indexMap.get(Pair.of(new FunctionContext(FunctionContext.Type.AGGREGATION, "sum",
-          Collections.singletonList(ExpressionContext.forIdentifier("col4"))), null)), 3);
+          List.of(ExpressionContext.forIdentifier("col4"))), null)), 3);
       assertEquals((int) indexMap.get(Pair.of(new FunctionContext(FunctionContext.Type.AGGREGATION, "max",
-          Collections.singletonList(ExpressionContext.forIdentifier("col4"))), null)), 4);
+          List.of(ExpressionContext.forIdentifier("col4"))), null)), 4);
       assertEquals((int) indexMap.get(Pair.of(new FunctionContext(FunctionContext.Type.AGGREGATION, "max",
-          Collections.singletonList(ExpressionContext.forIdentifier("col1"))), null)), 5);
+          List.of(ExpressionContext.forIdentifier("col1"))), null)), 5);
     }
 
     // DistinctCountThetaSketch (string literal and escape quote)
