@@ -29,7 +29,6 @@ import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.Statement;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -101,7 +100,7 @@ public class RealtimeKinesisIntegrationTest extends BaseKinesisIntegrationTest {
 
   @Override
   public List<String> getNoDictionaryColumns() {
-    return Collections.emptyList();
+    return List.of();
   }
 
   @Override
